# exam-creator

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
client/components/: config-view.tsx  diff-field.tsx  edit-exam-actions.tsx  edit-exam-config.tsx  edit-exam-generation-variability.tsx  question-form.tsx  question-search.tsx  question-type-config-form.tsx  tag-config-form.tsx
client/contexts/: exam-diff.tsx  index.ts
client/pages/: edit-exam.tsx  exams.tsx  generations.tsx  landing.tsx
client/types/: index.ts
client/utils/: fetch.ts
prisma-types/: Cargo.toml
prisma-types/src/: lib.rs
seeder/: Cargo.toml  README.md  main.rs  strategies.rs
server/: Cargo.toml  app.rs  config.rs  errors.rs  generate.rs  generation.rs  state.rs
server/database/: mod.rs  prisma.rs
server/extractor/: mod.rs
server/routes/: attempts.rs  exam_challenge.rs  exams.rs  generation.rs  mod.rs  moderations.rs  state.rs  users.rs  websocket.rs
server/routes/auth/: mod.rs
